kubernetes/apps/default/mainsail/app/printers.yaml
---
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses: ["10.0.20.89"]
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: sovol-zero
  name: sovol-zero-1
---
apiVersion: v1
kind: Service
metadata:
  name: sovol-zero
spec:
  ports:
    - name: moonraker
      port: 7125
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: sovol-zero
spec:
  ingressClassName: internal
  rules:
    - host: sovol-zero.serek.xyz
      http:
        paths:
          - backend:
              service:
                name: sovol-zero
                port:
                  name: moonraker
            path: /
            pathType: Prefix
          - backend:
              service:
                name: sovol-zero
                port:
                  name: http
            path: /webcam[1-3]?/
            pathType: ImplementationSpecific
---
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses: ["10.0.20.88"]
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: voron2
  name: voron2-1
---
apiVersion: v1
kind: Service
metadata:
  name: voron2
spec:
  ports:
    - name: moonraker
      port: 7125
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: voron2
spec:
  ingressClassName: internal
  rules:
    - host: voron2.serek.xyz
      http:
        paths:
          - backend:
              service:
                name: voron2
                port:
                  name: moonraker
            path: /
            pathType: Prefix
          - backend:
              service:
                name: voron2
                port:
                  name: http
            path: /webcam[1-3]?/
            pathType: ImplementationSpecific
